--- a/pndpd.conf
+++ b/pndpd.conf
@@ -30,6 +30,7 @@ responder {
 
 // Proxy example with autoconfigured whitelist
 // The whitelist is configured based on the addresses assigned to the interface specified. This works even if the IP addresses change frequently.
+// The whitelist is applied to iface2
 proxy {
     iface1 eth0
     iface2 eth1
