--- a/pndpd.conf
+++ b/pndpd.conf
@@ -5,6 +5,7 @@
 debug off
 
 // Responder example
+// Create an NDP responder that answers on interface "eth0"
 responder {
     iface eth0
     filter fd01::/64
@@ -12,6 +13,7 @@ responder {
 }
 
 // Proxy example
+// Create an NDP proxy that for proxying NDP between iface1 ("eth0") and iface2 ("eth1")
 // The whitelist is applied on iface2
 proxy {
     iface1 eth0
