Add build for multiple architectures, streamline process

--- a/pndpd.conf
+++ b/pndpd.conf
@@ -13,7 +13,7 @@ responder {
 }
 
 // Proxy example
-// Create an NDP proxy that for proxying NDP between iface1 ("eth0") and iface2 ("eth1")
+// Create an NDP proxy for proxying NDP between iface1 ("eth0") and iface2 ("eth1")
 // The whitelist is applied on iface2
 proxy {
     iface1 eth0
