Clearer configuration options

--- a/pndpd.conf
+++ b/pndpd.conf
@@ -13,28 +13,28 @@ responder {
 }
 
 // Proxy example
-// Create an NDP proxy for proxying NDP between iface1 ("eth0") and iface2 ("eth1")
-// The whitelist is applied on iface2
+// Create an NDP proxy for proxying NDP between the external ext-iface ("eth0") and the internal int-iface ("eth1")
 proxy {
-    iface1 eth0
-    iface2 eth1
+    ext-iface eth0
+    int-iface eth1
     filter fd01::/64
     filter fd02::/64
 }
 
 
 // Responder example with autoconfigured whitelist
-// The whitelist is configured based on the addresses assigned to the interface specified. This works even if the IP addresses change frequently.
+// The whitelist is configured based on the addresses assigned to the interface specified via the autosense parameter.
+// This works even if the IP addresses change frequently.
 responder {
     iface eth0
     autosense eth0
 }
 
 // Proxy example with autoconfigured whitelist
-// The whitelist is configured based on the addresses assigned to the interface specified. This works even if the IP addresses change frequently.
-// The whitelist is applied to iface2
+// The whitelist is configured based on the addresses assigned to the interface specified via the autosense parameter.
+// This works even if the IP addresses change frequently.
 proxy {
-    iface1 eth0
-    iface2 eth1
+    ext-iface eth0
+    int-iface eth1
     autosense eth1
 }
