Optimize ndp requests state list, Cleanup

--- a/pndpd.conf
+++ b/pndpd.conf
@@ -1,40 +1,45 @@
 // Example config file for PNDPD
 
-// Enable or disable debug
-// If enabled, this option can fill up your logfiles very quickly
-debug off
-
-// Responder example
-// Create an NDP responder that answers on interface "eth0"
-responder {
-    iface eth0
-    filter fd01::/64
-    filter fd02::/64
-}
-
-// Proxy example
-// Create an NDP proxy for proxying NDP between the external ext-iface ("eth0") and the internal int-iface ("eth1")
-proxy {
-    ext-iface eth0
-    int-iface eth1
-    filter fd01::/64
-    filter fd02::/64
-}
-
-
-// Responder example with autoconfigured whitelist
-// The whitelist is configured based on the addresses assigned to the interface specified via the autosense parameter.
-// This works even if the IP addresses change frequently.
-responder {
-    iface eth0
-    autosense eth0
-}
-
-// Proxy example with autoconfigured whitelist
-// The whitelist is configured based on the addresses assigned to the interface specified via the autosense parameter.
+// Proxy example with autoconfigured allow-list
+// The allow-list of IP addresses to proxy is configured based
+// on the addresses assigned to the interface specified via the autosense parameter.
 // This works even if the IP addresses change frequently.
 proxy {
     ext-iface eth0
     int-iface eth1
     autosense eth1
 }
+
+// Proxy example with a static allow-list
+// Create an NDP proxy for proxying NDP between the external ext-iface ("eth0") and the internal int-iface ("eth1")
+// Note that you can remove the filter lines to disable address checking completely (not recommended)
+proxy {
+    ext-iface eth0
+    int-iface eth1
+    filter fd01::/64
+    filter fd02::/64
+}
+
+
+// Responder example with autoconfigured allow-list (Not recommended - prefer using proxy mode)
+// Create an NDP responder that listens and responds on interface "eth0"
+// The allow-list of IP addresses to proxy is configured based
+// on the addresses assigned to the interface specified via the autosense parameter.
+// This works even if the IP addresses change frequently.
+responder {
+    iface eth0
+    autosense eth0
+}
+
+// Responder example with a static allow-list (Not recommended - prefer using proxy mode)
+// Create an NDP responder that listens and responds on interface "eth0"
+// Note that you can remove the filter lines to disable address checking completely (not recommended)
+responder {
+    iface eth0
+    filter fd01::/64
+    filter fd02::/64
+}
+
+// Enable or disable debug output
+// If enabled, this option can fill up system logfiles very quickly
+// debug off
