Monitor all interfaces by default

--- a/pndpd.conf
+++ b/pndpd.conf
@@ -8,6 +8,8 @@ proxy {
     ext-iface eth0
     int-iface eth1
     autosense eth1
+    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change (with the exception of the autosense interface)
+    // monitor-changes on
 }
 
 // Proxy example with a static allow-list
@@ -18,6 +20,8 @@ proxy {
     int-iface eth1
     filter fd01::/64
     filter fd02::/64
+    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change
+    // monitor-changes on
 }
 
 
@@ -29,6 +33,8 @@ proxy {
 responder {
     iface eth0
     autosense eth0
+    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change (with the exception of the autosense interface)
+    // monitor-changes on
 }
 
 // Responder example with a static allow-list (Not recommended - prefer using proxy mode)
@@ -38,6 +44,8 @@ responder {
     iface eth0
     filter fd01::/64
     filter fd02::/64
+    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change
+    // monitor-changes on
 }
 
 // Enable or disable debug output
