--- a/pndpd.conf
+++ b/pndpd.conf
@@ -2,12 +2,12 @@
 
 // Proxy example with autoconfigured allow-list
 // The allow-list of IP addresses to proxy is configured based
-// on the addresses assigned to the interface specified via the autosense parameter.
+// on the networks assigned to the interface specified via the autosense parameter.
 // This works even if the IP addresses change frequently.
 proxy {
     ext-iface eth0
     int-iface eth1
-    autosense eth1
+    autosense eth1 // If eth1 has fd01::1/64 assigned to it, then fd01::/64 will be configured as an allow-list
     // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change (with the exception of the autosense interface)
     // monitor-changes on
 }
@@ -28,11 +28,11 @@ proxy {
 // Responder example with autoconfigured allow-list (Not recommended - prefer using proxy mode)
 // Create an NDP responder that listens and responds on interface "eth0"
 // The allow-list of IP addresses to proxy is configured based
-// on the addresses assigned to the interface specified via the autosense parameter.
+// on the networks assigned to the interface specified via the autosense parameter.
 // This works even if the IP addresses change frequently.
 responder {
     iface eth0
-    autosense eth0
+    autosense eth0 // If eth0 has fd01::1/64 assigned to it, then fd01::/64 will be configured as an allow-list
     // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change (with the exception of the autosense interface)
     // monitor-changes on
 }
