--- a/pndpd.conf
+++ b/pndpd.conf
@@ -4,25 +4,25 @@
 // The allow-list of IP addresses to proxy is configured based
 // on the networks assigned to the interface specified via the autosense parameter.
 // This works even if the IP addresses change frequently.
-proxy {
-    ext-iface eth0
-    int-iface eth1
-    autosense eth1 // If eth1 has fd01::1/64 assigned to it, then fd01::/64 will be configured as an allow-list
-    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change (with the exception of the autosense interface)
-    // monitor-changes on
-}
+//proxy {
+//    ext-iface eth0
+//    int-iface eth1
+//    autosense eth1 // If eth1 has fd01::1/64 assigned to it, then fd01::/64 will be configured as an allow-list
+//    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change (with the exception of the autosense interface)
+//    // monitor-changes on
+//}
 
 // Proxy example with a static allow-list
 // Create an NDP proxy for proxying NDP between the external ext-iface ("eth0") and the internal int-iface ("eth1")
 // Note that you can remove the filter lines to disable address checking completely (not recommended)
-proxy {
-    ext-iface eth0
-    int-iface eth1
-    filter fd01::/64
-    filter fd02::/64
-    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change
-    // monitor-changes on
-}
+//proxy {
+//    ext-iface eth0
+//    int-iface eth1
+//    filter fd01::/64
+//    filter fd02::/64
+//    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change
+//    // monitor-changes on
+//}
 
 
 // Responder example with autoconfigured allow-list (Not recommended - prefer using proxy mode)
@@ -30,23 +30,23 @@ proxy {
 // The allow-list of IP addresses to proxy is configured based
 // on the networks assigned to the interface specified via the autosense parameter.
 // This works even if the IP addresses change frequently.
-responder {
-    iface eth0
-    autosense eth0 // If eth0 has fd01::1/64 assigned to it, then fd01::/64 will be configured as an allow-list
-    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change (with the exception of the autosense interface)
-    // monitor-changes on
-}
+//responder {
+//    iface eth0
+//    autosense eth0 // If eth0 has fd01::1/64 assigned to it, then fd01::/64 will be configured as an allow-list
+//    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change (with the exception of the autosense interface)
+//    // monitor-changes on
+//}
 
 // Responder example with a static allow-list (Not recommended - prefer using proxy mode)
 // Create an NDP responder that listens and responds on interface "eth0"
 // Note that you can remove the filter lines to disable address checking completely (not recommended)
-responder {
-    iface eth0
-    filter fd01::/64
-    filter fd02::/64
-    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change
-    // monitor-changes on
-}
+//responder {
+//    iface eth0
+//    filter fd01::/64
+//    filter fd02::/64
+//    // Disable monitor-changes only if the IP addresses assigned to the specified interfaces never change
+//    // monitor-changes on
+//}
 
 // Enable or disable debug output
 // If enabled, this option can fill up system logfiles very quickly
